--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,15 @@
             <version>1.4.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-mllib -->
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-mllib_2.11</artifactId>
+            <version>2.4.5</version>
+            <scope>runtime</scope>
+        </dependency>
+
+
     </dependencies>
 
 </project>
